fix: Improve category detection and hide base64 URL in dashboard
- Dashboard shows 'Generated via Gemini' instead of long base64 URL
- URL-based category now ALWAYS takes priority for sacred-texts.com
- Added better logging for category detection debug

--- a/app/static/dashboard_v2.html
+++ b/app/static/dashboard_v2.html
@@ -856,7 +856,11 @@
         const coverUrl = metaData.cover_urls?.cover_art_url;
         if (coverUrl) {
           document.getElementById('cover-img').src = coverUrl;
-          document.getElementById('cover-url').textContent = coverUrl;
+          // Don't show base64 URLs, just a friendly message
+          const displayUrl = coverUrl.startsWith('data:') 
+            ? '✅ Generated via Gemini (Nano Banana)' 
+            : coverUrl.substring(0, 50) + '...';
+          document.getElementById('cover-url').textContent = displayUrl;
         }
 
       } catch (err) {
