feat: Add mapping export for V3 Pipeline
- Add /api/mapping/export endpoint that embeds mapping in JSON
- Update V3 pipeline to check for embedded 'manual_mapping' in JSON
- Add 'Export til V3' button in Mapping Editor
- Mapping is now preserved when uploading to Railway V3 Pipeline

Fixes issue where manual mappings weren't applied on Railway.

--- a/HonoraWebScraper/public/mapping.html
+++ b/HonoraWebScraper/public/mapping.html
@@ -212,6 +212,8 @@
                     <div class="toolbar-right">
                         <button id="btn-preview" class="btn btn-secondary">👁 Preview</button>
                         <button id="btn-save" class="btn btn-primary">💾 Gem Mapping</button>
+                        <button id="btn-export" class="btn btn-success"
+                            title="Eksporter JSON med mapping til V3 Pipeline">🚀 Export til V3</button>
                     </div>
                 </div>
             </section>
